fix(android): read 123Pan flat WebDAV objects